# universal-video-downloader

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-15-video-list-cover-preview.md
docs/superpowers/specs/: 2026-07-15-video-list-cover-preview-design.md  2026-07-15-wechat-page-listener-design.md
scripts/: create_shortcut.ps1  fetch_multipart.py  fetch_wheels.py  generate_icon.py  start_uvd.bat  start_uvd.sh
universal_video_downloader/: README.md
universal_video_downloader/assets/wechat_channels/: README.md  inject.js
universal_video_downloader/cli/: main.py
universal_video_downloader/core/: base.py  config.py  models.py
universal_video_downloader/scheduler/: dispatcher.py  queue.py  registry.py
universal_video_downloader/tests/: test_cctv_adapter.py  test_config.py  test_dispatcher.py  test_e2e_batch.py  test_e2e_youtube.py  test_format_strategy.py  test_isaac.py  test_web_api.py  test_wechat_page_listener.py  test_windows_launcher_script.py
universal_video_downloader/web/: app.py  callback_adapter.py  system_proxy.py  wechat_listener.py
universal_video_downloader/web/static/: index.html
